[gd_scene load_steps=27 format=3 uid="uid://bqf3lvqh4ynwk"]

[ext_resource type="Script" path="res://level_design_objects/Buttons/Scale-Button.gd" id="1_186sn"]
[ext_resource type="Texture2D" uid="uid://ck4mqwpfcjqu4" path="res://Sprites/Scale-levels.png" id="2_tm0x7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_slk0i"]
albedo_color = Color(0.176471, 0.239216, 0.45098, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1l4hn"]
material = SubResource("StandardMaterial3D_slk0i")
size = Vector3(1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7udn0"]
albedo_color = Color(0.784314, 0.0784313, 0.0784313, 1)
emission = Color(0.627451, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_j5eeq"]
material = SubResource("StandardMaterial3D_7udn0")
height = 0.1
radial_segments = 8

[sub_resource type="Animation" id="Animation_86w71"]
resource_name = "Pressed Down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.136475, 0), Vector3(0, 0.010619, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.2, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_xpm3c"]
resource_name = "Pressed Up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.010619, 0), Vector3(0, 0.136475, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_ge7ve"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.010619, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkulr"]
_data = {
"Pressed Down": SubResource("Animation_86w71"),
"Pressed Up": SubResource("Animation_xpm3c"),
"RESET": SubResource("Animation_ge7ve")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_wdtmy"]
size = Vector3(1, 0.065, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cq7wl"]
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wy38r"]
albedo_color = Color(0.360784, 0.360784, 0.360784, 1)

[sub_resource type="BoxMesh" id="BoxMesh_o1ma1"]
material = SubResource("StandardMaterial3D_wy38r")
size = Vector3(0.05, 0.495, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2dr77"]
albedo_color = Color(0.360784, 0.360784, 0.360784, 1)

[sub_resource type="BoxMesh" id="BoxMesh_80khp"]
material = SubResource("StandardMaterial3D_2dr77")
size = Vector3(0.39, 0.24, 0.1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pj0h"]
atlas = ExtResource("2_tm0x7")
region = Rect2(0, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1cgh"]
atlas = ExtResource("2_tm0x7")
region = Rect2(121, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q343s"]
atlas = ExtResource("2_tm0x7")
region = Rect2(242, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfqlm"]
atlas = ExtResource("2_tm0x7")
region = Rect2(363, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ib3"]
atlas = ExtResource("2_tm0x7")
region = Rect2(484, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm5pt"]
atlas = ExtResource("2_tm0x7")
region = Rect2(605, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3e0f"]
atlas = ExtResource("2_tm0x7")
region = Rect2(726, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcggu"]
atlas = ExtResource("2_tm0x7")
region = Rect2(847, 0, 121, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yhka"]
atlas = ExtResource("2_tm0x7")
region = Rect2(968, 0, 121, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_w4q15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pj0h")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1cgh")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q343s")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfqlm")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ib3")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm5pt")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3e0f")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcggu")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yhka")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}]

[node name="Scale-Button" type="StaticBody3D"]
script = ExtResource("1_186sn")

[node name="Base" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1l4hn")

[node name="Button" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.010619, 0)
mesh = SubResource("CylinderMesh_j5eeq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_vkulr")
}

[node name="BaseHitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0172777, 0)
shape = SubResource("BoxShape3D_wdtmy")

[node name="ButtonHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.114475, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02021, 0)
shape = SubResource("CylinderShape3D_cq7wl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.369369, 0.261187, 0.44278)
mesh = SubResource("BoxMesh_o1ma1")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.36866, 0.574341, 0.443192)
mesh = SubResource("BoxMesh_80khp")

[node name="Sprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.368652, 0.574554, 0.496643)
sprite_frames = SubResource("SpriteFrames_w4q15")
animation = &"8"

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.373611, 0.617313, 0.6593)
light_energy = 11.828
light_indirect_energy = 3.909
light_volumetric_fog_energy = 3.26
shadow_enabled = true
omni_range = 4.565
omni_attenuation = 3.22739

[connection signal="body_entered" from="ButtonHitbox" to="." method="_on_button_hitbox_body_entered"]
[connection signal="body_exited" from="ButtonHitbox" to="." method="_on_button_hitbox_body_exited"]
